Add loading state for items in cart and change messages

--- a/apps/client-web-app/src/assets/prime/_primeng-extends.scss
+++ b/apps/client-web-app/src/assets/prime/_primeng-extends.scss
@@ -72,5 +72,13 @@ p-button.w-full .p-button {
 }
 
 .p-sidebar-right {
-  width: 40rem;
+  width: 100%;
+  max-width: 40rem;
+}
+
+@media (min-width: 40rem) {
+  .p-sidebar-right {
+    border-top-left-radius: calc(var(--border-radius) * 2);
+    border-bottom-left-radius: calc(var(--border-radius) * 2);
+  }
 }
