Add animation loading in cart and info about amount of available books

--- a/apps/client-web-app/src/assets/prime/_primeflex-extra.scss
+++ b/apps/client-web-app/src/assets/prime/_primeflex-extra.scss
@@ -1,3 +1,17 @@
+.animation-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes pulse {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+
 .text-color {
   color: var(--text-color);
 }
