Improve style reset and set font size to 100%
Make this changes to improve accesiblity and scalability of text

--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -11,6 +11,7 @@
 
 html {
   scroll-behavior: smooth;
+  font-size: 100%;
 }
 
 body {
@@ -30,4 +31,11 @@ p {
 
 .height-content {
   height: calc(100svh - var(--header-height) - 3rem);
+}
+
+textarea,
+input {
+  font: inherit;
+  letter-spacing: inherit;
+  word-spacing: inherit;
 }
