Change signal store to service with signals
Change auth and cart signal store to service to simplify code and
improve maintainbility

--- a/libs/client-web-app/auth/feature/login/src/lib/login/login.component.html
+++ b/libs/client-web-app/auth/feature/login/src/lib/login/login.component.html
@@ -60,7 +60,7 @@
       <p-button
         type="submit"
         label="Zaloguj się!"
-        [loading]="status() === 'loading'"
+        [loading]="false"
         loading-icon="pi pi-spin pi-spinner"
         iconPos="right"
         class="w-full mt-4"
