--- a/libs/client-web-app/auth/feature/login/src/lib/login/login.component.html
+++ b/libs/client-web-app/auth/feature/login/src/lib/login/login.component.html
@@ -60,7 +60,7 @@
       <p-button
         type="submit"
         label="Zaloguj się!"
-        [loading]="false"
+        [loading]="loading()"
         loading-icon="pi pi-spin pi-spinner"
         iconPos="right"
         class="w-full mt-4"
