--- a/libs/client-web-app/auth/feature/login/src/lib/login/login.component.html
+++ b/libs/client-web-app/auth/feature/login/src/lib/login/login.component.html
@@ -1,70 +1,65 @@
 <e-commerce-form-wrapper
-  [link]="{ url: '../register', name: 'Stwórz konto!' }"
-  header="Witaj ponownie!"
-  subtitle="Jesteś tutaj nowy?"
+  [link]="{ url: '../register', name: 'Create an account!' }"
+  header="Welcome back!"
+  subtitle="Are you new here?"
 >
   <form
     [formGroup]="loginForm"
-    class="flex flex-column gap-3 w-full max-w-30rem xl:align-items-center"
+    class="flex flex-column gap-2 w-full max-w-30rem xl:align-items-center"
     (submit)="onSubmit()"
   >
-    <div class="flex flex-column w-full">
-      <p-floatLabel>
-        <input
-          autofocus
-          pInputText
-          id="email"
-          autocomplete="off"
-          [ngClass]="{
-            'ng-dirty ng-invalid':
-              !!errorMessage && loginForm.controls.email.invalid
-          }"
-          formControlName="email"
-        />
-        <label for="email">Email</label>
-      </p-floatLabel>
-      @if (loginForm.controls.email.dirty || !!errorMessage) { @if
-      (loginForm.controls.email.getError('required')) {
-      <small class="text-red-500 mt-1">To pole jest wymagane </small>
-      } @else if (loginForm.controls.email.getError('email')) {
-      <small class="text-red-500 mt-1">Wpisz poprawny adres email </small>
-      } }
-    </div>
-    <div class="flex flex-column w-full">
-      <p-floatLabel>
-        <p-password
-          id="password"
-          [feedback]="false"
-          [toggleMask]="true"
-          [ngClass]="{
-            'ng-dirty ng-invalid':
-              errorMessage && loginForm.controls.password.invalid
-          }"
-          formControlName="password"
-        ></p-password>
-        <label for="password">Hasło</label>
-      </p-floatLabel>
-      @if(loginForm.controls.password.dirty || !!errorMessage) { @if
-      (loginForm.controls.password.getError('minlength')) {
-      <small class="text-red-500 mt-1"
-        >Hasło powinno mieć co najmniej 6 znaków</small
-      >
-      } @if (loginForm.controls.password.getError('required')) {
-      <small class="text-red-500 mt-1">To pole jest wymagane</small>
-      } } @if (!!errorMessage) {
-      <div class="text-red-500 mt-4">
-        {{ errorMessage }}
-      </div>
+    <lib-form-row label="Email" [isRequired]="true">
+      <input
+        autofocus
+        pInputText
+        id="email"
+        autocomplete="off"
+        [ngClass]="{
+          'ng-dirty ng-invalid': loginForm.controls.email.invalid && submitted()
+        }"
+        formControlName="email"
+      />
+      @if (loginForm.controls.email.dirty || submitted()) {
+      <ng-container slot="error-message">
+        @if (loginForm.controls.email.getError('required')) {
+        <lib-error-message />
+        } @else if (loginForm.controls.email.getError('email')) {
+        <lib-error-message message="Email is invalid" />
+        }
+      </ng-container>
       }
+    </lib-form-row>
+    <lib-form-row label="Password" [isRequired]="true">
+      <p-password
+        id="password"
+        [feedback]="false"
+        [toggleMask]="true"
+        [ngClass]="{
+          'ng-dirty ng-invalid':
+            loginForm.controls.password.invalid && submitted()
+        }"
+        formControlName="password"
+      />
+      @if(loginForm.controls.password.dirty || submitted()) {
+      <ng-container slot="error-message">
+        @if (loginForm.controls.password.getError('minlength')) {
+        <lib-error-message
+          message="Password should have at least 6 characters"
+        />
+        } @if (loginForm.controls.password.getError('required')) {
+        <lib-error-message />
+        }
+      </ng-container>
+      }
+    </lib-form-row>
 
-      <p-button
-        type="submit"
-        label="Zaloguj się!"
-        [loading]="loading()"
-        loading-icon="pi pi-spin pi-spinner"
-        iconPos="right"
-        class="w-full mt-4"
-      ></p-button>
-    </div>
+    <p-button
+      type="submit"
+      label="Log in!"
+      [loading]="loading()"
+      loading-icon="pi pi-spin pi-spinner"
+      iconPos="right"
+      class="w-full mt-4"
+    />
   </form>
 </e-commerce-form-wrapper>
