--- a/libs/client-web-app/order/ui/order-details/src/lib/order-details/order-details.component.html
+++ b/libs/client-web-app/order/ui/order-details/src/lib/order-details/order-details.component.html
@@ -1,241 +1,214 @@
 <form [formGroup]="form" class="flex flex-column w-full gap-2">
-  @if (initialLoading()) {
-  <div class="flex flex-column gap-3">
-    <div class="flex flex-column md:flex-row gap-3 w-full">
-      <div class="flex flex-column gap-2 w-full">
-        <p-skeleton width="7rem" height="1rem" />
-        <p-skeleton width="100%" height="2.2rem" />
-      </div>
-      <div class="flex flex-column gap-2 w-full">
-        <p-skeleton width="8rem" height="1rem" />
-        <p-skeleton width="100%" height="2.2rem" />
-      </div>
-    </div>
-    <div class="flex flex-column gap-2">
-      <p-skeleton width="5rem" height="1rem" />
-      <p-skeleton width="20rem" height="2.2rem" />
-    </div>
-    <div class="flex flex-column gap-2">
-      <p-skeleton width="7rem" height="1rem" />
-      <p-skeleton width="100%" height="2.2rem" />
-    </div>
-    <div class="flex flex-column gap-2">
-      <p-skeleton width="4rem" height="1rem" />
-      <p-skeleton width="100%" height="2.2rem" />
-    </div>
-    <div class="flex flex-column gap-2">
-      <p-skeleton width="8rem" height="1rem" />
-      <p-skeleton width="14rem" height="2.2rem" />
-    </div>
-    <div class="flex flex-column gap-2">
-      <p-skeleton width="7rem" height="1rem" />
-      <p-skeleton width="14rem" height="2.2rem" />
-    </div>
-    <div class="flex flex-column gap-2">
-      <p-skeleton width="8rem" height="1rem" />
-      <p-skeleton width="20rem" height="2.2rem" />
-    </div>
-    <div class="flex flex-column gap-2">
-      <p-skeleton width="5rem" height="1rem" />
-      <p-skeleton width="20rem" height="2.2rem" />
-    </div>
-    <div class="flex align-items-center justify-content-between gap-3 mt-6">
-      <p-skeleton width="12.5rem" height="2.2rem" />
-      <p-skeleton width="10rem" height="2.2rem" />
-    </div>
-  </div>
-  } @else {
   <div class="flex flex-column md:flex-row gap-3">
-    <div class="flex flex-column w-full">
-      <div class="flex flex-column gap-1">
-        <label for="firstname">Fist name *</label>
-        <input
-          class="w-full"
-          pInputText
-          id="firstname"
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              form.controls.firstName.invalid &&
-              (form.controls.firstName.dirty || submitted())
-          }"
-          formControlName="firstName"
-          placeholder="Type your first name"
-        />
-      </div>
+    <lib-form-row
+      label="First name"
+      [isRequired]="true"
+      [isLoading]="initialLoading()"
+    >
+      <input
+        class="w-full"
+        pInputText
+        id="firstname"
+        [ngClass]="{
+          'ng-invalid ng-dirty':
+            form.controls.firstName.invalid &&
+            (form.controls.firstName.dirty || submitted())
+        }"
+        formControlName="firstName"
+        placeholder="Type your first name"
+      />
       @if (form.controls.firstName.invalid && (form.controls.firstName.dirty ||
       submitted()) ) {
-      <small class="text-red-500 mt-1">This field is required</small>
+      <lib-error-message />
       }
-    </div>
-    <div class="flex flex-column w-full">
-      <div class="flex flex-column gap-1">
-        <label for="lastname">Last name *</label>
-        <input
-          class="w-full"
-          pInputText
-          id="lastname"
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              form.controls.lastName.invalid &&
-              (form.controls.lastName.dirty || submitted())
-          }"
-          formControlName="lastName"
-          placeholder="Type your last name"
-        />
-      </div>
+    </lib-form-row>
+    <lib-form-row
+      label="Last name"
+      [isRequired]="true"
+      [isLoading]="initialLoading()"
+    >
+      <input
+        class="w-full"
+        pInputText
+        id="lastname"
+        [ngClass]="{
+          'ng-invalid ng-dirty':
+            form.controls.lastName.invalid &&
+            (form.controls.lastName.dirty || submitted())
+        }"
+        formControlName="lastName"
+        placeholder="Type your last name"
+      />
       @if (form.controls.lastName.invalid && (form.controls.lastName.dirty ||
       submitted())) {
-      <small class="text-red-500 mt-1">This field is required</small>
+      <lib-error-message />
       }
-    </div>
+    </lib-form-row>
   </div>
-  <div class="flex flex-column">
-    <div class="flex flex-column gap-1 w-20rem">
-      <label for="country">Country *</label>
-      <p-dropdown
-        class="w-full"
-        formControlName="country"
-        [options]="countries()"
-        [ngClass]="{
-          'ng-invalid ng-dirty':
-            form.controls.country.invalid &&
-            (form.controls.country.dirty || submitted())
-        }"
-        optionLabel="name"
-        [showClear]="true"
-        placeholder="Select a country"
-      />
-    </div>
+  <lib-form-row
+    label="Country"
+    [isRequired]="true"
+    [isLoading]="initialLoading()"
+    labelSkeletonWidth="5rem"
+    inputSkeletonWidth="20rem"
+  >
+    <p-dropdown
+      class="w-full"
+      formControlName="country"
+      [options]="countries()"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          form.controls.country.invalid &&
+          (form.controls.country.dirty || submitted())
+      }"
+      optionLabel="name"
+      [showClear]="true"
+      placeholder="Select a country"
+    />
     @if (form.controls.country.invalid && (form.controls.country.dirty ||
     submitted())) {
-    <small class="text-red-500 mt-1">This field is required</small>
+    <lib-error-message />
     }
-  </div>
-  <div class="flex flex-column">
-    <div class="flex flex-column gap-1">
-      <label for="city">City *</label>
-      <input
-        pInputText
-        id="city"
-        [ngClass]="{
-          'ng-invalid ng-dirty':
-            form.controls.city.invalid &&
-            (form.controls.city.dirty || submitted())
-        }"
-        placeholder="Type your city"
-        formControlName="city"
-      />
-    </div>
+  </lib-form-row>
+  <lib-form-row
+    label="City"
+    [isRequired]="true"
+    [isLoading]="initialLoading()"
+    labelSkeletonWidth="5rem"
+  >
+    <input
+      pInputText
+      id="city"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          form.controls.city.invalid &&
+          (form.controls.city.dirty || submitted())
+      }"
+      placeholder="Type your city"
+      formControlName="city"
+    />
     @if (form.controls.city.invalid && (form.controls.city.dirty ||
     submitted())) {
-    <small class="text-red-500 mt-1">This field is required</small>
+    <lib-error-message />
     }
-  </div>
-  <div class="flex flex-column">
-    <div class="flex flex-column gap-1">
-      <label for="street">Street *</label>
-      <input
-        pInputText
-        id="street"
-        [ngClass]="{
-          'ng-invalid ng-dirty':
-            form.controls.street.invalid &&
-            (form.controls.street.dirty || submitted())
-        }"
-        placeholder="Type your street"
-        formControlName="street"
-      />
-    </div>
+  </lib-form-row>
+  <lib-form-row
+    label="Street"
+    [isRequired]="true"
+    [isLoading]="initialLoading()"
+    labelSkeletonWidth="7rem"
+  >
+    <input
+      pInputText
+      id="street"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          form.controls.street.invalid &&
+          (form.controls.street.dirty || submitted())
+      }"
+      placeholder="Type your street"
+      formControlName="street"
+    />
     @if (form.controls.street.invalid && (form.controls.street.dirty ||
     submitted())) {
-    <small class="text-red-500 mt-1">This field is required</small>
+    <lib-error-message />
     }
-  </div>
-
-  <div class="flex flex-column">
-    <div class="flex flex-column gap-1">
-      <label for="home-number">Home number *</label>
-      <input
-        pInputText
-        id="home-number"
-        class="w-14rem"
-        [ngClass]="{
-          'ng-invalid ng-dirty':
-            form.controls.homeNumber.invalid &&
-            (form.controls.homeNumber.dirty || submitted())
-        }"
-        placeholder="Type your home number"
-        formControlName="homeNumber"
-      />
-    </div>
+  </lib-form-row>
+  <lib-form-row
+    label="Home number"
+    [isRequired]="true"
+    [isLoading]="initialLoading()"
+    labelSkeletonWidth="4rem"
+  >
+    <input
+      pInputText
+      id="home-number"
+      class="w-14rem"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          form.controls.homeNumber.invalid &&
+          (form.controls.homeNumber.dirty || submitted())
+      }"
+      placeholder="Type your home number"
+      formControlName="homeNumber"
+    />
     @if (form.controls.homeNumber.invalid && (form.controls.homeNumber.dirty ||
     submitted())) {
-    <small class="text-red-500 mt-1">This field is required</small>
+    <lib-error-message />
     }
-  </div>
-  <div class="flex flex-column">
-    <div class="flex flex-column gap-1">
-      <label for="house-number">House number</label>
-      <input
-        pInputText
-        id="house-number"
-        class="w-14rem"
-        [ngClass]="{
-          'ng-invalid ng-dirty':
-            form.controls.houseNumber.invalid &&
-            (form.controls.houseNumber.dirty || submitted())
-        }"
-        placeholder="Type your house number"
-        formControlName="houseNumber"
-      />
-    </div>
+  </lib-form-row>
+  <lib-form-row
+    label="House number"
+    [isLoading]="initialLoading()"
+    labelSkeletonWidth="8rem"
+    inputSkeletonWidth="14rem"
+  >
+    <input
+      pInputText
+      id="house-number"
+      class="w-14rem"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          form.controls.houseNumber.invalid &&
+          (form.controls.houseNumber.dirty || submitted())
+      }"
+      placeholder="Type your house number"
+      formControlName="houseNumber"
+    />
     @if (form.controls.houseNumber.invalid && (form.controls.houseNumber.dirty
     || submitted())) {
-    <small class="text-red-500 mt-1">This field is required</small>
+    <lib-error-message />
     }
-  </div>
-  <div class="flex flex-column">
-    <div class="flex flex-column gap-1">
-      <label for="postcode">Postcode *</label>
-      <input
-        pInputText
-        id="postcode"
-        class="w-20rem"
-        [ngClass]="{
-          'ng-invalid ng-dirty':
-            form.controls.postcode.invalid &&
-            (form.controls.postcode.dirty || submitted())
-        }"
-        placeholder="postcode"
-        formControlName="postcode"
-      />
-    </div>
+  </lib-form-row>
+  <lib-form-row
+    label="Post code"
+    [isRequired]="true"
+    [isLoading]="initialLoading()"
+    labelSkeletonWidth="7rem"
+    inputSkeletonWidth="14rem"
+  >
+    <input
+      pInputText
+      id="postcode"
+      class="w-20rem"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          form.controls.postcode.invalid &&
+          (form.controls.postcode.dirty || submitted())
+      }"
+      placeholder="postcode"
+      formControlName="postcode"
+    />
     @if (form.controls.postcode.invalid && (form.controls.postcode.dirty ||
     submitted())) {
-    <small class="text-red-500 mt-1">This field is required</small>
+    <lib-error-message />
     }
-  </div>
-  <div class="flex flex-column">
-    <div class="flex flex-column gap-1">
-      <label for="phone">Phone *</label>
-      <input
-        pInputText
-        id="phone"
-        class="w-20rem"
-        [ngClass]="{
-          'ng-invalid ng-dirty':
-            form.controls.phone.invalid &&
-            (form.controls.phone.dirty || submitted())
-        }"
-        placeholder="Type your phone number"
-        formControlName="phone"
-      />
-    </div>
+  </lib-form-row>
+  <lib-form-row
+    label="Phone"
+    [isRequired]="true"
+    [isLoading]="initialLoading()"
+    labelSkeletonWidth="8rem"
+    inputSkeletonWidth="20rem"
+  >
+    <input
+      pInputText
+      id="phone"
+      class="w-20rem"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          form.controls.phone.invalid &&
+          (form.controls.phone.dirty || submitted())
+      }"
+      placeholder="Type your phone number"
+      formControlName="phone"
+    />
     @if (form.controls.phone.invalid && (form.controls.phone.dirty ||
     submitted())) {
-    <small class="text-red-500 mt-1">This field is required</small>
+    <lib-error-message />
     }
-  </div>
+  </lib-form-row>
+
   <div class="flex align-items-center justify-content-between gap-3 mt-6">
     <a
       class="p-button p-button-outlined no-underline link flex align-items-center gap-2"
@@ -252,5 +225,4 @@
       label="Go to shipping"
     />
   </div>
-  }
 </form>
